<resources>
    <string name="app_name">VolunteerMaps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="opp_day">Ongoing</string>
    <string name="splash_text">Find Opportunities in Your Area!</string>
    <string name="redo_search">REDO SEARCH IN THIS AREA</string>
    <string name="transparent_warning">Many locations shown are approximations. Please contact the organization before travelling</string>
    <string name="description">Description</string>
    <string name="less">Show less</string>
    <string name="more">Show more</string>
    <string name="instagram">Photos from Instagram</string>
    <string name="information">Information</string>
    <string name="ongoing_efforts">Ongoing Volunteering Efforts</string>
    <string name="last_check_date">LAST_UPDATED_VOLUNTEER_DATE</string>
    
    <string name="all">All Opportunities</string>
    <string name="advocacy">Advocacy &amp; Human Rights</string>
    <string name="animals">Animals</string>
    <string name="arts">Arts &amp; Culture</string>
    <string name="children">Children &amp; Youth</string>
    <string name="community">Community</string>
    <string name="computers">Computers &amp; Technology</string>
    <string name="education">Education &amp; Literacy</string>
    <string name="health">Health &amp; Medicine</string>
    <string name="seniors">Seniors</string>
    <string name="other">Other</string>
    <string name="saved">Saved</string>
</resources>
